@@ -49,6 +49,9 @@
 
 1839.	[bug]		<isc/hash.h> was not being installed.
 
+1837.	[bug]		Compile time option ISC_FACILITY was not effective
+			for 'named -u <user>'.  [RT #13714]
+
 1836.	[cleanup]	Silence compiler warnings in hash_test.c.
 
 1835.	[bug]		Update dnssec-signzone's usage message. [RT #13657]
